[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/TestTargetBolt01.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]

[node name="TargetBolt" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TempBugFix" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25 )
enabled = true
cast_to = Vector3( 0, 0, -0.5 )
[connection signal="body_entered" from="." to="." method="_on_Bolt_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
